welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: ';' expected but 'else' found.
			else droite(); return false
                        ^SnakeBuggle:16: error: ';' expected but 'else' found.
			else gauche(); return false
                        ^